--- a/src/app/components/parkings/parkings.component.html
+++ b/src/app/components/parkings/parkings.component.html
@@ -1,6 +1,5 @@
 <div class="parkings">
-  <app-parkings
+  <app-parking
     [parking]="parking"
-    *ngFor="let parking of parkings"></app-parkings>
+    *ngFor="let parking of parkings"></app-parking>
 </div>
-
