--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -5,6 +5,7 @@
 <div class="users">
     <app-user 
     (deleteUser)="deleteOneUser($event)"
+    (updateUser)="updateOneUser($event)"
     [user]="user" 
     *ngFor="let user of users"></app-user>
 </div>
