--- a/src/app/components/parking/parking.component.html
+++ b/src/app/components/parking/parking.component.html
@@ -5,5 +5,6 @@
     </mat-card-header>
     <mat-card-content>Parking Size: {{parking.size}}</mat-card-content>
     <mat-card-content>Parking Score: {{parking.score}}</mat-card-content>
+    <mat-card-actions><button mat-raised-button color="warn" (click)="cancel()">delete</button></mat-card-actions>
   </mat-card>
 </div>
