canviant el nom horrible

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<mat-toolbar color="primary">Para visualizar usuarios ve a /users.</mat-toolbar>
+<mat-toolbar color="primary">WELCOME TO APARCA'M</mat-toolbar>
 <router-outlet></router-outlet>
