new users form path created

--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,7 +1,7 @@
-<div class="form">
+<!-- <div class="form">
     <app-form
     (addUser)="userAdd($event)"></app-form>
-</div>
+</div> -->
 <div class="users">
     <app-user 
     (deleteUser)="deleteOneUser($event)"
