--- a/src/app/components/parkings/parkings.component.css
+++ b/src/app/components/parkings/parkings.component.css
@@ -3,3 +3,9 @@ div.parkings{
     justify-content: center;
     flex-wrap: wrap;
 }
+div.form{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
