--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,12 @@
     <li>
         <a (click)="goToParkingList()">Parkings List</a>
     </li>
+    <li>
+      <a (click)="goToAddReport()">Report</a>
+    </li>
+    <li>
+      <a (click)="goToReportList()">Reports List</a>
+    </li>
   </ul>
 
 <router-outlet></router-outlet>
