--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,26 +1,33 @@
-<form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-  <p>
-    <mat-form-field appearance="fill">
-      <mat-label>User Name</mat-label>
-      <input matInput formControlName="name">
-    </mat-form-field>
-  </p>
+<div class="container">
+  <div class="card">
+    <mat-card>
+      <mat-card-title><h1>REGISTER</h1></mat-card-title>
+      <mat-card-content>
+        <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>User Name</mat-label>
+              <input matInput formControlName="email">
+            </mat-form-field>
+          </p>
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Mail</mat-label>
+              <input matInput formControlName="password">
+            </mat-form-field>
+          </p>
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Password</mat-label>
+              <input matInput formControlName="password">
+            </mat-form-field>
+          </p>
+          <p>
+            <button mat-raised-button color="primary" type="submit" [disabled]="!userForm.valid">Submit</button>
+          </p>
 
-  <p>
-    <mat-form-field appearance="fill">
-      <mat-label>Mail</mat-label>
-      <input matInput formControlName="email">
-    </mat-form-field>
-  </p>
-
-  <p>
-    <mat-form-field appearance="fill">
-      <mat-label>Password</mat-label>
-      <input matInput formControlName="password">
-    </mat-form-field>
-  </p>
-  <p>
-    <button mat-raised-button color="primary" type="submit" [disabled]="!userForm.valid">Submit</button>
-  </p>
-
-</form>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
