--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,8 +1,8 @@
-.container{
-    display: flex;
-    justify-content: center;
+.my-form{
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
 }
-
-.card{
-    margin-top: 100px;
+.full-width {
+  width: 100%;
 }
