--- a/src/app/components/parking/parking.component.css
+++ b/src/app/components/parking/parking.component.css
@@ -1,3 +1,13 @@
 div.parking{
     margin: 15px;
+    width: 15;
+    padding-right: 5%;
 }
+.my-form{
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  .full-width {
+    width: 100%;
+  }
