--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -7,13 +7,13 @@
           <p>
             <mat-form-field appearance="fill">
               <mat-label>User Name</mat-label>
-              <input matInput formControlName="email">
+              <input matInput formControlName="name">
             </mat-form-field>
           </p>
           <p>
             <mat-form-field appearance="fill">
               <mat-label>Mail</mat-label>
-              <input matInput formControlName="password">
+              <input matInput formControlName="email">
             </mat-form-field>
           </p>
           <p>
