--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -5,6 +5,7 @@
             </mat-card-header>
         <mat-card-content>User Mail: {{user.email}}</mat-card-content>
         <mat-card-content>User Pasword: {{user.password}}</mat-card-content>
+        <mat-card-content>Deleted: {{user.deleted}}</mat-card-content>
         <mat-card-actions><button mat-raised-button color="warn" (click)="delete()">delete</button></mat-card-actions>
     </mat-card>
 </div>
