--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,7 +1,19 @@
-<!-- <div class="form">
-    <app-form
-    (addUser)="userAdd($event)"></app-form>
-</div> -->
+<!-- <mat-toolbar color="primary">WELCOME TO APARCA'M</mat-toolbar> -->
+<!--The content below is only a placeholder and can be replaced.-->
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <h1>APARCA'M</h1>
+      <!--  <span>HOME</span> -->
+      <span class="spacer"></span>
+      <a mat-button (click)="goToUserList()"> User List </a>
+      <a mat-button (click)="goToAddParking()"> Create parking </a>
+      <a mat-button (click)="goToParkingList()"> Parking List </a>
+      <a mat-button (click)="goToAddReport()"> Report </a>
+      <a mat-button (click)="goToReportList()"> Report List </a>
+      <a mat-button (click)="goToLogOff()"> Log out </a>
+    </mat-toolbar-row>
+  </mat-toolbar>
+  <router-outlet></router-outlet>
 <div class="users">
     <app-user 
     (deleteUser)="deleteOneUser($event)"
