--- a/src/app/components/create-parking2/create-parking2.component.html
+++ b/src/app/components/create-parking2/create-parking2.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <h1>APARCA'M</h1>
+      <h1></h1>
       <!--  <span>HOME</span> -->
       <span class="spacer"></span>
       <a mat-button (click)="goToUserList()"> User List </a>
@@ -12,71 +12,81 @@
     </mat-toolbar-row>
   </mat-toolbar>
   <router-outlet></router-outlet>
-<mat-toolbar color="primary">Crear un parking</mat-toolbar>
 <router-outlet></router-outlet>
-<form [formGroup]="parkingForm" (ngSubmit)="onSubmit()">
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Email</mat-label>
-            <input matInput formControlName="email">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Type of car</mat-label>
-            <input matInput formControlName="type">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Price</mat-label>
-            <input matInput formControlName="price">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Size</mat-label>
-            <input matInput formControlName="size">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Difficulty</mat-label>
-            <input matInput formControlName="difficulty">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Country</mat-label>
-            <input matInput formControlName="country">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>City</mat-label>
-            <input matInput formControlName="city">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Street</mat-label>
-            <input matInput formControlName="street">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Spot Number</mat-label>
-            <input matInput formControlName="spotNumber">
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Street Number</mat-label>
-            <input matInput formControlName="streetNumber">
-        </mat-form-field>
-    </p>
-    <p>
-        <button mat-raised-button color="primary" type="submit" [disabled]="!parkingForm.valid">Submit</button>
-    </p>
-
-</form>
+<div class="container">
+    <div class="card">
+      <mat-card>
+        <mat-card-title>
+          <h1>Create a parking</h1>
+        </mat-card-title>
+        <mat-card-content>
+            <form [formGroup]="parkingForm" (ngSubmit)="onSubmit()">
+                <p>
+                    <mat-form-field appearance="fill">
+                    <mat-label>Email</mat-label>
+                    <input matInput formControlName="email">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                    <mat-label>Type of car</mat-label>
+                    <input matInput formControlName="type">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                    <mat-label>Price</mat-label>
+                    <input matInput formControlName="price">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                    <mat-label>Size</mat-label>
+                        <input matInput formControlName="size">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Difficulty</mat-label>
+                        <input matInput formControlName="difficulty">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Country</mat-label>
+                        <input matInput formControlName="country">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>City</mat-label>
+                        <input matInput formControlName="city">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Street</mat-label>
+                        <input matInput formControlName="street">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Spot Number</mat-label>
+                        <input matInput formControlName="spotNumber">
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Street Number</mat-label>
+                        <input matInput formControlName="streetNumber">
+                    </mat-form-field>
+                </p>
+                
+                <p>
+                    <button mat-raised-button color="primary" type="submit" [disabled]="!parkingForm.valid">Submit</button>
+                </p>
+            </form>
+        </mat-card-content>
+    </mat-card>
+  </div>
+</div>
