--- a/src/app/components/parkings/parkings.component.html
+++ b/src/app/components/parkings/parkings.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <h1>APARCA'M</h1>
+    <h1></h1>
     <!--  <span>HOME</span> -->
     <span class="spacer"></span>
     <a mat-button (click)="goToUserList()"> User List </a>
@@ -12,9 +12,18 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
-<div class="parkings">
-  <app-parking
-    (cancelParking)="cancelOneParking($event)"
-    [parking]="parking"
-    *ngFor="let parking of parkings"></app-parking>
+<div class="container">
+  <div class="card">
+    <mat-card>
+      <mat-card-title>
+        <h1>All parkings</h1>
+      </mat-card-title>
+      <mat-card-content>
+        <div class="parkings">
+          <app-parking (cancelParking)="cancelOneParking($event)" [parking]="parking"
+            *ngFor="let parking of parkings"></app-parking>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
