--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <h1>APARCA'M</h1>
+    <h1></h1>
     <!--  <span>HOME</span> -->
     <span class="spacer"></span>
     <a mat-button (click)="goToUserList()"> User List </a>
@@ -12,43 +12,55 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
-<form [formGroup]="reportForm" (ngSubmit)="onSubmit()" class="form">
-    <p>
-      <mat-form-field appearance="fill">
-        <mat-label>Reporting user's email</mat-label>
-        <input matInput formControlName="user" placeholder="reporting user's email">
-      </mat-form-field>
-    </p>
+<div class="container">
+  <div class="card">
+    <mat-card>
+      <mat-card-title>
+        <h1>Create a report</h1>
+      </mat-card-title>
+      <mat-card-content>
+        <form [formGroup]="reportForm" (ngSubmit)="onSubmit()" class="form">
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Reporting user's email</mat-label>
+              <input matInput formControlName="user" placeholder="reporting user's email">
+            </mat-form-field>
+          </p>
 
-    <p>
-      <mat-form-field appearance="fill">
-        <mat-label>Text</mat-label>
-        <input matInput formControlName="text" placeholder="description of report">
-      </mat-form-field>
-    </p>
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Text</mat-label>
+              <input matInput formControlName="text" placeholder="description of report">
+            </mat-form-field>
+          </p>
 
-    <p>
-      <mat-form-field appearance="fill">
-        <mat-label>Type of report? </mat-label>
-        <input matInput formControlName="type" placeholder="type of report">
-      </mat-form-field>
-    </p>
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Type of report? </mat-label>
+              <input matInput formControlName="type" placeholder="type of report">
+            </mat-form-field>
+          </p>
 
-    <p>
-      <mat-form-field appearance="fill">
-        <mat-label>Level</mat-label>
-        <input matInput formControlName="level" placeholder="level of report">
-      </mat-form-field>
-    </p>
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Level</mat-label>
+              <input matInput formControlName="level" placeholder="level of report">
+            </mat-form-field>
+          </p>
 
-    <p>
-      <mat-form-field appearance="fill">
-        <mat-label>Date of report</mat-label>
-        <input matInput formControlName="date" placeholder="date of report">
-      </mat-form-field>
-    </p>
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Date of report</mat-label>
+              <input matInput formControlName="date" placeholder="date of report">
+            </mat-form-field>
+          </p>
 
-    <p>
-      <button mat-raised-button color="primary" type="submit" [disabled]="!reportForm.valid" class="button">SUBMIT</button>
-    </p>
-  </form>
+          <p>
+            <button mat-raised-button color="primary" type="submit" [disabled]="!reportForm.valid"
+              class="button">SUBMIT</button>
+          </p>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
